--- a/dashboard.html
+++ b/dashboard.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
 
-            <div onclick="enterRealm('game')" class="group relative h-96 bg-gray-900/20 rounded-xl overflow-hidden cursor-pointer transition-all duration-300">
+            <div onclick="window.location.href='games.html'" class="group relative h-96 bg-gray-900/20 rounded-xl overflow-hidden cursor-pointer transition-all duration-300">
                 <div class="absolute inset-0 z-0 border-mask rounded-xl pointer-events-none">
                     <div class="absolute -inset-[100%] animate-spin-cw bg-[conic-gradient(transparent_80%,_#fbbf24_100%)]"></div>
                     <div class="absolute -inset-[100%] animate-spin-ccw bg-[conic-gradient(transparent_80%,_#fbbf24_100%)]"></div>
