Modify game control instructions in index.html
Updated instructions for game controls to include swipes.

--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -38,10 +38,10 @@
     </div>
 
     <div class="mt-6 text-cyan-500 text-xs font-mono tracking-widest animate-pulse text-center drop-shadow-[0_0_5px_rgba(34,211,238,0.8)]">
-        <span class="hidden md:inline">[ USE ARROW KEYS ]</span>
-        <span class="md:hidden">[ SWIPE TO MOVE ]</span>
+        <span class="hidden md:inline">[ USE SWIPES OR ARROW KEYS ]</span>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
