--- a/portfolio.html
+++ b/portfolio.html
@@ -111,11 +111,11 @@
                         <i class="fa-solid fa-check text-cyan-900 group-hover:text-cyan-400 transition-colors"></i>
                     </div>
                     <div class="group flex items-center justify-between p-3 border-b border-gray-800 hover:border-cyan-500/50 transition-colors">
-                        <span class="text-gray-300 group-hover:text-white font-mono text-sm">Windows OS Architecture</span>
+                        <span class="text-gray-300 group-hover:text-white font-mono text-sm">Windows OS Understanding</span>
                         <i class="fa-solid fa-check text-cyan-900 group-hover:text-cyan-400 transition-colors"></i>
                     </div>
                     <div class="group flex items-center justify-between p-3 border-b border-gray-800 hover:border-cyan-500/50 transition-colors">
-                        <span class="text-gray-300 group-hover:text-white font-mono text-sm">High-Speed Typing (100+ WPM)</span>
+                        <span class="text-gray-300 group-hover:text-white font-mono text-sm">Debugging</span>
                         <i class="fa-solid fa-bolt text-yellow-500 group-hover:animate-pulse"></i>
                     </div>
                     <div class="group flex items-center justify-between p-3 border-b border-gray-800 hover:border-cyan-500/50 transition-colors">
@@ -173,4 +173,5 @@
     
     <script src="portfolio.js"></script>
 </body>
+
 </html>
