--- a/projects/login.html
+++ b/projects/login.html
@@ -11,26 +11,26 @@
 </head>
 <body class="bg-black flex items-center justify-center min-h-screen p-4 antialiased selection:bg-cyan-900 selection:text-white relative">
 
-    <a href="../projects.html" class="absolute top-6 left-6 z-50 flex items-center gap-2 px-4 py-2 rounded-full border border-cyan-900/50 bg-black/50 backdrop-blur-md hover:bg-cyan-900/30 hover:border-cyan-500 transition-all duration-300 group">
+    <a href="../projects.html" class="absolute top-4 left-4 md:top-6 md:left-6 z-50 flex items-center gap-2 px-4 py-2 rounded-full border border-cyan-900/50 bg-black/50 backdrop-blur-md hover:bg-cyan-900/30 hover:border-cyan-500 transition-all duration-300 group">
         <i class="fa-solid fa-arrow-left text-xs text-cyan-400 group-hover:-translate-x-1 transition-transform"></i>
-        <span class="text-xs font-bold uppercase tracking-wider text-cyan-400">Back to Archive</span>
+        <span class="text-xs font-bold uppercase tracking-wider text-cyan-400">Back</span>
     </a>
 
-    <div id="mainCard" class="relative w-full max-w-[950px] h-[550px] bg-black rounded-xl border border-cyan-900/40 shadow-[0_0_80px_-20px_rgba(8,145,178,0.3)] overflow-hidden group">
+    <div id="mainCard" class="relative w-full max-w-[950px] min-h-[600px] h-auto md:h-[550px] md:min-h-0 bg-black rounded-xl border border-cyan-900/40 shadow-[0_0_80px_-20px_rgba(8,145,178,0.3)] overflow-hidden group grid grid-cols-1 md:block">
 
-        <div class="diagonal-bg"></div>
+        <div class="diagonal-bg col-start-1 row-start-1 w-full h-full z-10"></div>
 
-        <div class="register-layer absolute inset-0 z-20">
+        <div class="register-layer col-start-1 row-start-1 w-full z-20 flex flex-col md:block md:absolute md:inset-0">
             
-            <div class="absolute top-0 left-0 h-full w-[40%] flex flex-col items-center justify-center">
-                <h1 class="text-4xl font-black tracking-widest text-white drop-shadow-[0_2px_10px_rgba(0,0,0,0.8)] uppercase font-sans text-center opacity-90">
+            <div class="relative w-full pt-20 pb-4 md:pt-0 md:pb-0 md:absolute md:top-0 md:left-0 md:h-full md:w-[40%] flex flex-col items-center justify-center">
+                <h1 class="text-3xl md:text-4xl font-black tracking-widest text-white drop-shadow-[0_2px_10px_rgba(0,0,0,0.8)] uppercase font-sans text-center opacity-90 leading-tight">
                     Welcome to<br>the Club!
                 </h1>
             </div>
 
-            <div class="absolute top-0 right-0 h-full w-[45%] flex flex-col justify-center items-center">
-                <div class="w-[320px]">
-                    <h2 class="text-3xl font-bold mb-10 text-white tracking-wide font-sans text-center opacity-90">Register</h2>
+            <div class="relative w-full px-4 pb-12 md:px-0 md:pb-0 md:absolute md:top-0 md:right-0 md:h-full md:w-[45%] flex flex-col justify-center items-center">
+                <div class="w-full max-w-[320px]">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-6 md:mb-10 text-white tracking-wide font-sans text-center opacity-90">Register</h2>
                     <form class="space-y-6">
                         <div class="relative group">
                             <input type="text" placeholder=" " class="peer w-full bg-transparent border-b border-gray-500 py-3 text-white text-sm outline-none focus:border-cyan-400 transition-all font-medium tracking-wide">
@@ -61,10 +61,17 @@
             </div>
         </div>
 
-        <div class="signin-layer absolute inset-0 pointer-events-none z-20">
-            <div class="absolute top-0 left-0 h-full w-[45%] flex flex-col justify-center items-center">
-                <div class="w-[320px]">
-                    <h2 class="text-3xl font-bold mb-10 text-white tracking-wide font-sans text-center opacity-90">Welcome Back</h2>
+        <div class="signin-layer col-start-1 row-start-1 w-full z-20 flex flex-col md:block md:absolute md:inset-0">
+            
+            <div class="order-first relative w-full pt-20 pb-4 md:pt-0 md:pb-0 md:absolute md:top-0 md:right-0 md:h-full md:w-[40%] flex flex-col items-center justify-center">
+                <h1 class="text-3xl md:text-4xl font-black tracking-widest text-white drop-shadow-[0_2px_10px_rgba(0,0,0,0.8)] uppercase font-sans text-center opacity-90 leading-tight">
+                    We missed<br>You!
+                </h1>
+            </div>
+
+            <div class="relative w-full px-4 pb-12 md:px-0 md:pb-0 md:absolute md:top-0 md:left-0 md:h-full md:w-[45%] flex flex-col justify-center items-center">
+                <div class="w-full max-w-[320px]">
+                    <h2 class="text-2xl md:text-3xl font-bold mb-6 md:mb-10 text-white tracking-wide font-sans text-center opacity-90">Welcome Back</h2>
                     <form class="space-y-6">
                         <div class="relative group">
                             <input type="text" placeholder=" " class="peer w-full bg-transparent border-b border-gray-500 py-3 text-white text-sm outline-none focus:border-cyan-400 transition-all font-medium tracking-wide">
@@ -87,12 +94,6 @@
                         <button onclick="toggleAuth()" class="text-cyan-600 hover:text-cyan-400 ml-1 font-bold transition-colors hover:underline cursor-pointer">Register</button>
                     </p>
                 </div>
-            </div>
-
-            <div class="absolute top-0 right-0 h-full w-[40%] flex flex-col items-center justify-center">
-                <h1 class="text-4xl font-black tracking-widest text-white drop-shadow-[0_2px_10px_rgba(0,0,0,0.8)] uppercase font-sans text-center opacity-90">
-                    We missed<br>You!
-                </h1>
             </div>
         </div>
     </div>
