Music and Project update

--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -16,12 +16,12 @@
         <span class="text-[10px] font-bold uppercase tracking-wider text-cyan-400">Back</span>
     </a>
 
-    <div class="relative z-10 flex flex-col items-center gap-4">
+    <div class="relative z-10 flex flex-col items-center gap-6">
         
         <div class="relative">
             <canvas id="gameCanvas" width="360" height="360" class="border-2 border-cyan-900 shadow-[0_0_50px_rgba(34,211,238,0.2)] rounded-lg bg-black"></canvas>
             
-            <div class="absolute -top-8 left-0 w-full flex justify-between text-cyan-400 font-mono text-sm tracking-widest px-1">
+            <div class="absolute -top-10 left-0 w-full flex justify-between text-cyan-400 font-mono text-sm tracking-widest px-1">
                 <span>SCORE: <span id="scoreVal">0</span></span>
                 <span>HIGH: <span id="highScoreVal">0</span></span>
             </div>
@@ -35,11 +35,11 @@
                 </button>
             </div>
         </div>
+    </div>
 
-        <div class="text-cyan-300 text-sm md:text-base font-mono tracking-widest animate-pulse text-center drop-shadow-[0_0_10px_rgba(34,211,238,1)] z-50">
-            [ ARROWS • SWIPE • DRAG ]
-        </div>
-
+    <div class="mt-6 text-cyan-500 text-xs font-mono tracking-widest animate-pulse text-center drop-shadow-[0_0_5px_rgba(34,211,238,0.8)]">
+        <span class="hidden md:inline">[ USE ARROW KEYS ]</span>
+        <span class="md:hidden">[ SWIPE TO MOVE ]</span>
     </div>
 
     <script src="script.js"></script>
