--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,13 @@
 </head>
 <body class="text-white min-h-screen">
 
+    <div id="entrance-overlay" class="fixed inset-0 z-50 bg-black flex flex-col items-center justify-center cursor-pointer transition-opacity duration-1000">
+        <div class="text-center animate-pulse">
+            <h1 class="text-4xl font-black tracking-[0.5em] text-cyan-500 mb-4">ASAD'S LAIR</h1>
+            <p class="text-gray-400 text-sm tracking-widest uppercase border-b border-gray-600 pb-2 inline-block">Tap to Enter System</p>
+        </div>
+    </div>
+
     <div class="fixed inset-0 pointer-events-none z-0">
         <div class="absolute top-0 left-0 w-full h-full bg-[radial-gradient(circle_at_top,_var(--tw-gradient-stops))] from-cyan-900/20 via-black to-black"></div>
     </div>
