--- a/aria/aria.html
+++ b/aria/aria.html
@@ -30,6 +30,8 @@
         <div class="eye right-eye"></div>
     </div>
 
+    <div id="aria-response" class="aria-text"></div>
+
     <div class="interaction-area">
         <i class="fa-solid fa-keyboard text-gray-500"></i>
         <input type="text" id="ariaInput" class="chat-input" placeholder="Type something to ARIA..." autocomplete="off">
