--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
                 </div>
 
                 <div class="absolute bottom-0 left-0 w-full p-6 border-t border-blue-900/30 bg-black/50 backdrop-blur-sm group-hover:bg-blue-900/20 transition-colors z-20">
-                    <h3 class="text-xl font-bold text-white mb-1 group-hover:text-blue-400">Neon Login System</h3>
-                    <p class="text-xs text-gray-400 uppercase tracking-wider">Full Stack Auth & Glassmorphism</p>
+                    <h3 class="text-xl font-bold text-white mb-1 group-hover:text-blue-400">Authentication Page</h3>
+                    <p class="text-xs text-gray-400 uppercase tracking-wider">Login/SignUp Demo</p>
                 </div>
             </div>
 
@@ -63,11 +63,11 @@
                 <div class="absolute inset-0 bg-gradient-to-b from-transparent to-black opacity-90 z-10"></div>
                 
                 <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-20 group-hover:scale-110 transition-transform duration-500">
-                    <i class="fa-solid fa-calculator text-9xl icon-neon text-transparent" style="-webkit-text-stroke: 2px #ec4899; filter: drop-shadow(0 0 5px #ec4899);"></i>
+                    <i class="fa-solid fa-calculator text-9xl icon-neon icon-neon-pink relative z-10"></i>
                 </div>
 
                 <div class="absolute bottom-0 left-0 w-full p-6 border-t border-pink-900/30 bg-black/50 backdrop-blur-sm group-hover:bg-pink-900/20 transition-colors z-20">
-                    <h3 class="text-xl font-bold text-white mb-1 group-hover:text-pink-400">Neon Calculator</h3>
+                    <h3 class="text-xl font-bold text-white mb-1 group-hover:text-pink-400">Web Calculator</h3>
                     <p class="text-xs text-gray-400 uppercase tracking-wider">Math & Cyberpunk</p>
                 </div>
             </div>
@@ -87,7 +87,7 @@
 
                 <div class="absolute bottom-0 left-0 w-full p-6 border-t border-green-900/30 bg-black/50 backdrop-blur-sm group-hover:bg-green-900/20 transition-colors z-20">
                     <h3 class="text-xl font-bold text-white mb-1 group-hover:text-green-400">Spotify Downloader</h3>
-                    <p class="text-xs text-gray-400 uppercase tracking-wider">Python & Spotify API</p>
+                    <p class="text-xs text-gray-400 uppercase tracking-wider">API Calling via Rapidkey</p>
                 </div>
             </div>
 
